Done with basic templates for the user's side.

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -17,12 +17,12 @@
   </section>
   <footer class="footer has-background-black-ter has-text-grey">
     <div class="content columns has-text-centered">
-      <div class="column">
+    {{/* <div class="column">
         <p>RSS:</p>
         <p>All Articles</p>
         <p>Programming</p>
         <p>Other Articles</p>
-      </div>
+      </div> */}}
       <div class="column">
         <p>
           Made with <a class="has-text-info">Golang</a> and <a class="has-text-primary">Bulma</a>
