--- a/static/templates/article.html
+++ b/static/templates/article.html
@@ -6,11 +6,11 @@
         <div class="content columns">
           <div class="column is-8 is-offset-2">
           <h1 class="title">{{$a.Title}}</h1>
-          {{if eq $a.Published $a.Edited}}
-          <p class="is-size-6">{{$a.Published}}</p>
-          {{else}}
-          <p class="is-size-6">{{$a.Edited}}</p>
+          <p class="is-size-4"><span class="tag is-white">Published: {{$a.Published}}</span>
+          {{if .IsEdited}}
+          <span class="tag is-white"><i>Last Edited: {{$a.Edited}}</i></span>
           {{end}}
+          </p>
           {{template "body"}}
           </div>
         </div>
