--- a/static/templates/articleForm.html
+++ b/static/templates/articleForm.html
@@ -5,7 +5,7 @@
     <title>New Article</title>
   </head>
   <body>
-    <form class="" action="/" method="post">
+    <form class="" action="{{.FormAction}}" method="post">
       <label for="title">Title:</label>
       <input type="text" name="title" value="{{.Article.Title}}">
       <br>
@@ -18,11 +18,11 @@
       <textarea name="body" rows="8" cols="80">{{.Article.Body}}</textarea>
       <br>
       <br>
-      <label for="body">Slug:</label>
+      <label for="slug">Slug:</label>
       <input type="text" name="slug" {{.SlugValueAttr}}>
       <br>
       <br>
-      <label for="body">Category:</label>
+      <label for="category">Category:</label>
       <input type="text" name="category" value="{{.Article.Category}}">
       <br>
       <br>
