--- a/static/templates/articleForm.html
+++ b/static/templates/articleForm.html
@@ -23,7 +23,10 @@
       <br>
       <br>
       <label for="category">Category:</label>
-      <input type="text" name="category" value="{{.Article.Category}}">
+      <select class="" name="category">
+        <option value="Programming">Programming</option>
+        <option value="Other">Other</option>
+      </select>
       <br>
       <br>
       <input type="submit" value="Submit">
