--- a/static/templates/articleForm.html
+++ b/static/templates/articleForm.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>New Article</title>
-  </head>
-  <body>
+{{define "title"}}
+New Article
+{{end}}
+
+{{define "main"}}
     <form class="" action="{{.FormAction}}" method="post">
       <label for="title">Title:</label>
       <input type="text" name="title" value="{{.Article.Title}}">
@@ -34,5 +32,4 @@
     {{range .Errors}}
     {{.}}
     {{end}}
-  </body>
-</html>
+{{end}}
