--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Login Page</title>
-  </head>
-  <body>
-    <h1>Login</h1>
+{{define "title"}}
+Login Page
+{{end}}
+
+{{define "main"}}
+    <h1 class="title">Login</h1>
     <form class="" action="/admin/login" method="post">
       <label for="username">Username</label>
       <input type="text" name="username" value="">
@@ -20,5 +18,4 @@
     {{range .Errors}}
     {{.}}
     {{end}}
-  </body>
-</html>
+{{end}}
