Email gets sent on login attempt. Env vars for paths and email.

--- a/static/templates/adminPanel.html
+++ b/static/templates/adminPanel.html
@@ -4,7 +4,7 @@ Admin Panel
 
 {{define "main"}}
 <p class="title">Admin Panel</p>
-<a href="/new">New Article +</a>
+<a class="button is-info is-outlined" href="/new">New Article +</a>
 <br>
 <br>
 <select id="article-select" class="" name="article-select" onchange="setLinks();">
