--- a/static/templates/articleForm.html
+++ b/static/templates/articleForm.html
@@ -1,5 +1,9 @@
 {{define "title"}}
-New Article
+  {{ if eq .FormAction "/new" }}
+  New Article
+  {{ else }}
+  Edit Article
+  {{ end }}
 {{end}}
 
 {{define "main"}}
@@ -27,7 +31,7 @@ New Article
       </select>
       <br>
       <br>
-      <input type="submit" value="Submit">
+      <input class="button" type="submit" value="Submit">
     </form>
     {{range .Errors}}
     {{.}}
