New logo, banner replaced, favicon, page titles done.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,10 +14,9 @@ footer {
 }
 
 #banner {
-  background-image:url('/static/images/temp-pattern-small.jpg');
-  height: 50px;
-  background-position: center;
-  background-repeat: repeat;
+  height: 4px;
+  /*background-image:url('/static/images/temp-pattern-small.jpg');*/
+  background-color: #7d4;
 }
 
 .admin-bar {
