--- a/static/templates/article.html
+++ b/static/templates/article.html
@@ -1,5 +1,5 @@
 {{define "title"}}
-{{.Article.Title}}
+{{.Article.Title}} -
 {{end}}
 
 {{define "main"}}{{$a := .Article}}<article class="content">
