--- a/static/templates/articleForm.html
+++ b/static/templates/articleForm.html
@@ -1,8 +1,8 @@
 {{define "title"}}
   {{ if eq .FormAction "/new" }}
-  New Article
+  New Article -
   {{ else }}
-  Edit Article
+  Edit Article -
   {{ end }}
 {{end}}
 
