--- a/static/templates/nav.html
+++ b/static/templates/nav.html
@@ -2,7 +2,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <h1 class="title">LOGO</h1>
+        <img src="/static/images/logo-small.png" alt="" style="max-height:2.25rem;">
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="blogNav">
@@ -17,11 +17,11 @@
         <a class="navbar-item" href="/">
           <span>Programming</span>
         </a>
-
+<!--
         <a class="navbar-item" href="/other">
           Other Articles
         </a>
-
+-->
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-item">
             More
